src/Pages/AboutPage/AboutPage.scss
@import '../../styles/breakpoints';
@import '../../styles/variables';

.about-page {
    padding-top: 2rem;
    color: $text-color-secondary;
    min-height: 70vh;
    display: flex;
    flex: 0 1 auto;
    flex-direction: column;
    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
    justify-content: center;

    @include breakpoint-small-down {
        padding-top: 3rem;
    }

    h1 {
        padding: 1rem 0;
        font-size: 2.5rem;
    }

    .content-grid {
        flex: auto;
    }

    .about-wrapper {

        .about-content {
            font-size: 0.875rem;
            line-height: 1.5rem;

            @include breakpoint-small-down {
                font-size: 1rem;
            }

            p {
                font-weight: 300;
                padding: 0.5rem 0;
            }

            .text-emoji {
                padding: 2rem 0;
                font-size: 1.5rem;
                font-weight: 300;
                text-align: center;
            }
        }
    }

}

